--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,9 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+#python build dirs
+
+/python/build/
+/python/dist/
+/python/libioplus.egg-info/
